2000-04-08  Christopher James Lahey  <clahey@helixcode.com>

	* providers/smtp/.cvsignore: Added a .cvsignore file.

2000-04-08  Dan Winship  <danw@helixcode.com>

	* providers/sendmail/camel-sendmail-transport.c (_send_internal):
	actually record the pid returned by fork(). Noticed by clahey.

	* providers/smtp/camel-smtp-transport.c: #include <sys/param.h>
	for MAXHOSTNAMELEN. (This is a stopgap: some of the uses of
	MAXHOSTNAMELEN are wrong anyway...)

2000-04-07  Jeffrey Stedfast  <fejj@stampede.org>

	* providers/smtp/camel-smtp-transport.c: fixes to numerous bugs;
	should now build fine.
	* providers/Makefile.am: Readded smtp now that smtp builds without
	error.

2000-04-07  Dan Winship  <danw@helixcode.com>

	* providers/pop3/camel-pop3-store.c (pop3_connect): Clarify error
	messages.
	(finalize): fix a bug in camel_exception usage
	(pop3_connect): Remember the password after asking for it the
	first time.

2000-04-07  NotZed  <NotZed@HelixCode.com>

	* providers/Makefile.am: Removed smtp for now, its a long way from
	building.
	* providers/smtp/Makefile.in: Removed file that shouldn't have been
	checked in.

2000-04-06  Matt Loper  <matt@helixcode.com>

	* camel-folder-pt-proxy.c (_get_full_name): Remove exception param
	from get_full_name() called, since get_full_name() was changed to
	not have an exception in the last param (see dan's notes below).
	(_get_name): same.

2000-04-06  Dan Winship  <danw@helixcode.com>

	* camel-store.[ch]: Reorganize the folder-fetching methods and
	implement a folder cache so that multiple requests for the same
	folder will yield the same CamelFolder object (as long as it
	remains active). Includes some code to remove no-longer-active
	folders from the cache, but it doesn't get used since nothing is
	ever unref'ed in Camel right now...
	
	* providers/mbox/camel-mbox-store.c:
	* providers/pop3/camel-pop3-store.c: update for CamelStore
	changes.

	* camel-folder.[ch]: Remove the (unused) CamelException argument