@@ -1,3 +1,8 @@
+2000-04-09  Dan Winship  <danw@helixcode.com>
+
+	* camel-movemail.c: New file with new function to dot-lock an mbox
+	file and copy it to a safe private directory.
+
 2000-04-08  Christopher James Lahey  <clahey@helixcode.com>
 
 	* providers/smtp/.cvsignore: Added a .cvsignore file.
